feat: buffer를 이용해 로그를 한번에 s3로 저장

--- a/docker/.env-non-dev
+++ b/docker/.env-non-dev
@@ -48,5 +48,9 @@ MAPBOX_API_KEY=''
 
 
 # Minio 
-MINIO_ROOT_USER: minioadmin
-MINIO_ROOT_PASSWORD: minioadmin
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+
+# S3
+S3_BUCKET=test2
+S3_LOG_BUFFER_CAPACITY=30
