--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -96,7 +96,23 @@ services:
     env_file: docker/.env-non-dev
     command: server /data --console-address ":9001"
     restart: unless-stopped
-    
+
+  mysql:
+    image: library/mysql:5.7
+    container_name: connection-test-db
+    ports:
+      - "3306:3306"
+    environment:
+      TZ: Asia/Seoul
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_USER: root
+      MYSQL_USER: user
+      MYSQL_PASSWORD: root
+      MYSQL_DATABASE: test
+      DATABASE_HOST: 127.0.0.1
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    platform: linux/amd64    
+
 volumes:
   superset_home:
     external: false
